Add DevFlow extension descriptors
